--- a/index.html
+++ b/index.html
@@ -340,22 +340,6 @@
 
 
 
-
-      <!-- <div class="flex justify-between items-center">
-        <h2>Bestsellers</h2>
-        <div class=" flex glide__arrows glider" data-glide-el="controls">
-          <button class=" w-10 h-9 border border-gray-500 rounded-l-md focus:outline-none" data-glide-dir="<">
-            <span class=" material-icons pl-1 pt-1 tracking-widest">arrow_backward</span>
-          </button>
-          
-          <button class="w-10 h-9 border border-gray-500 rounded-r-md -ml-px focus:outline-none" data-glide-dir=">">
-            <span class=" material-icons pl-2 pt-1">arrow_forward</span>
-          </button>
-      </div>
-
-      
-      </div> -->
-
       <div class="glider">
         <div class=" flex justify-between items-center">
           <h2 class=" font-medium">Bestsellers</h2>
@@ -385,7 +369,7 @@
       </div>
 
 
-      <!-- <div class=" flex justify-between items-center">
+      <div class=" flex justify-between items-center">
         <div class=" w-2/4">
           <h2 class=" font-semibold text-4xl">New Artists get up to 75%
             welcome bonus on first work</h2>
@@ -397,35 +381,6 @@
           <img src="./images/Ellipse 7.png" alt="" class=" relative">
           <img src="./images/Ellipse 6.png" alt="" class=" absolute -mt-80 ml-64">
           <img src="./images/Ellipse 8.png" alt="" class=" absolute -mt-24 ml-60">
-        </div>
-      </div> -->
-
-
-      <div class="glider">
-        <div class=" flex justify-between items-center">
-          <h2 class=" font-medium">Bestsellers</h2>
-          <div class="glide__arrows flex items-center" data-glide-el="controls">
-            <p class=" mr-5">see all</p>
-            <button class="w-10 h-9 border border-gray-500 rounded-l-md focus:outline-none"" data-glide-dir="<">
-              <span class=" material-icons pl-1 pt-1 tracking-widest">arrow_backward</span>
-            </button>
-            <button class="w-10 h-9 border border-gray-500 rounded-r-md -ml-px focus:outline-none" data-glide-dir=">">
-              <span class=" material-icons pl-2 pt-1">arrow_forward</span>
-            </button>
-          </div>
-        </div>
-        <div class="glide__track" data-glide-el="track">
-          <ul class="glide__slides">
-            <li class="glide__slide">
-              <div>
-                <img src="./images/card_small1.png" alt="">
-                <h2>akshfs</h2>
-                <p>ajsfhj</p>
-              </div>
-            </li>
-            <li class="glide__slide"><img src="./images/card_small1.png" alt=""></li>
-            <li class="glide__slide"><img src="./images/card_small1.png" alt=""></li>
-          </ul>
         </div>
       </div>
 
@@ -446,7 +401,7 @@
         new Glide('.glider', config).mount()
       </script>
 
-<!-- <script>
+<script>
     function toggler(){
         var mobile_view = document.getElementById('mobile_view');
         if(mobile_view.style.display === 'none'){
@@ -456,11 +411,11 @@
             mobile_view.style.display = 'none';
         }
     }
-</script> -->
+</script>
 
 
 
-<!-- <script>
+<script>
     $(document).ready(function(){
   
   /* 1. Visualizing things on Hover - See next part for action on click */
@@ -518,7 +473,7 @@ function responseMessage(msg) {
   $('.success-box').fadeIn(200);  
   $('.success-box div.text-message').html("<span>" + msg + "</span>");
 }
-</script> -->
+</script>
 
 
 
