--- a/test.html
+++ b/test.html
@@ -1,41 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/glide.core.min.css">
-</head>
-<body class="page-container">
-
-  <div class="glide">
-    <div class="glide__track" data-glide-el="track">
-      <ul class="glide__slides">
-        <li class="glide__slide"><img src="./images/card1.jpg" alt=""></li>
-        <li class="glide__slide"><img src="./images/card2.svg" alt=""></li>
-        <li class="glide__slide"><img src="./images/card3.svg" alt=""></li>
-      </ul>
-    </div>
-    <div class="glide__arrows" data-glide-el="controls">
-      <button class="" data-glide-dir="<">prev</button>
-      <button class="" data-glide-dir=">">next</button>
-    </div>
-  </div>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 
 
-
-
-  <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-
-  <script>
-    const config = {
-      type: 'carousel',
-      perView: 2
+  <style>
+    .div1{
+      margin-left: 250px;
+      border: 2px solid red;
+      width: 430px;
+      height: 230px;
+      position: relative;
     }
-    new Glide('.glide', config).mount()
-  </script>
+    .div2{
+      border: 2px solid blue;
+      width: 50px;
+      height: 50px;
+      position: absolute;
+      top: 115px;
+      /* bottom: 50%; */
+
+    }
+  </style>
+</head>
+<body>
+  <div class="div1">
+    alskasjks
+    
+  </div>
+  <div class="div2">
+    alkfsl
+  </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+<div>
+  <img src="./images/card1.jpg" alt="">
+  <h1 class="lg:text-base leading-tight tracking-wide text-sm">Kid Cudi & Kanye West</h1>
+  <p class="lg:text-sm tracking-wide text-xs">Kids See Ghosts, 2021</p>
+  <div class='rating-stars'>
+    <ul id='stars' class="">
+      <li class='star' title='Poor' data-value='1'>
+        <i class="fas fa-bolt"></i>
+      </li>
+      <li class='star' title='Fair' data-value='2'>
+        <i class="fas fa-bolt"></i>
+      </li>
+      <li class='star' title='Good' data-value='3'>
+        <i class="fas fa-bolt"></i>
+      </li>
+      <li class='star' title='Excellent' data-value='4'>
+        <i class="fas fa-bolt"></i>
+      </li>
+      <li class='star' title='WOW!!!' data-value='5'>
+        <i class="fas fa-bolt"></i>
+      </li>
+    </ul>
+</div>
+</div>
+
+
+
+
+
+
+<div class="">
+  <img src="./images/card_small1.png" alt="">
+  <h1 class="text-base leading-tight tracking-wide">aksjfkasjf</h1>
+  <p class="text-sm tracking-wide">ajsfhj</p>
+  <div class='rating-stars'>
+    <ul id='stars' class="">
+      <li class='star' title='Poor' data-value='1'>
+        <i class="fas fa-bolt"></i>
+      </li>
+      <li class='star' title='Fair' data-value='2'>
+        <i class="fas fa-bolt"></i>
+      </li>
+      <li class='star' title='Good' data-value='3'>
+        <i class="fas fa-bolt"></i>
+      </li>
+      <li class='star' title='Excellent' data-value='4'>
+        <i class="fas fa-bolt"></i>
+      </li>
+      <li class='star' title='WOW!!!' data-value='5'>
+        <i class="fas fa-bolt"></i>
+      </li>
+    </ul>
+</div>
+</div>
