--- a/index.html
+++ b/index.html
@@ -413,6 +413,147 @@
       </div>
 
 
+      <div class=" relative lg:ml-28 lg:mr-48 mt-36">
+        <div class="glider">
+          <div class=" flex justify-between items-center">
+            <h2 class=" font-base text-3xl">Coming Soon</h2>
+            <div class="glide__arrows flex items-center" data-glide-el="controls">
+              <p class=" mr-5">see all</p>
+              <button class="w-10 h-9 border border-gray-500 rounded-l-md focus:outline-none"" data-glide-dir="<">
+                <span class=" material-icons pl-1 pt-1 tracking-widest">arrow_backward</span>
+              </button>
+              <button class="w-10 h-9 border border-gray-500 rounded-r-md -ml-px focus:outline-none" data-glide-dir=">">
+                <span class=" material-icons pl-2 pt-1">arrow_forward</span>
+              </button>
+            </div>
+          </div>
+
+          <div class=" flex flex-wrap justify-between">
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+      <div class=" relative lg:ml-28 lg:mr-48 mt-36">
+        <div class="glider">
+          <div class=" flex justify-between items-center">
+            <h2 class=" font-base text-3xl">Browse by genre</h2>
+            <div class="glide__arrows flex items-center" data-glide-el="controls">
+              <p class=" mr-5">see all</p>
+              <button class="w-10 h-9 border border-gray-500 rounded-l-md focus:outline-none"" data-glide-dir="<">
+                <span class=" material-icons pl-1 pt-1 tracking-widest">arrow_backward</span>
+              </button>
+              <button class="w-10 h-9 border border-gray-500 rounded-r-md -ml-px focus:outline-none" data-glide-dir=">">
+                <span class=" material-icons pl-2 pt-1">arrow_forward</span>
+              </button>
+            </div>
+          </div>
+
+          <div class=" flex flex-wrap justify-between">
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+
+            <div>
+              <img src="./images/card_small1.png" alt="">
+              <div>
+                <h2>ajskf</h2>
+                <p>akf</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <a href="#" class=""><h1 class=" text-2xl leading-8 font-extrabold">amazing musician</h1></a>
+
+
 
   
 
